# claude-code-features-showcase

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  Taskfile.yml  docker-compose.test.yml  pyproject.toml
.claude/: hooks.json
.claude/agents/test-coverage-auditor/: agent.md
.claude/commands/: commit.md  docs.md  refactor.md  test-coverage.md  test.md  x-analyze.md  x-test-coverage.md
.claude/hooks/: README.md  format-file.sh  format-hook.md  pre-commit-hook.md  pre-commit.sh
.claude/skills/: code-reviewer.md  pdf-reader.md  test-generator.md  xlsx-reader.md
.claude/skills/pdf-reader/: SKILL.md
.claude/skills/test-coverage-auditor/: SKILL.md
.claude/skills/test-generator/: SKILL.md
.claude/skills/x-code-reviewer/: SKILL.md
.claude/skills/x-pdf-reader/: SKILL.md
.claude/skills/x-test-generator/: SKILL.md
.claude/skills/x-xlsx-reader/: SKILL.md
.claude/skills/xlsx-reader/: SKILL.md
apps/: README.md
apps/backend/: pyproject.toml
apps/backend/src/backend/: __init__.py  app.py  main.py  routes.py
apps/backend/src/backend/templates/: index.html
apps/backend/tests/: __init__.py  test_frontend.py  test_main.py  test_routes.py
apps/frontend/: .gitignore  Dockerfile.test  README.md  about.html  demo.html  index.html  package.json  pyproject.toml  pytest.ini
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/frontend/: __init__.py  app.py
apps/frontend/tests/: README.md  __init__.py  test_app.py  test_e2e.py  test_html_pages.py  test_sanity.py
docs/: code-style.md  context-management.md  file-formats.md  models.md  workflows.md
examples/: README.md
examples/01-spec-driven-development/: README.md
examples/02-fix-security-issue/: README.md  after.py  before.py
examples/03-add-feature/: README.md
examples/04-refactoring/: README.md
examples/usage-guides/: README.md
examples/usage-guides/advanced-workflows/: command-chaining.md  skill-combinations.md
examples/usage-guides/agents/: test-coverage-auditor.md
specs/: README.md  TEMPLATE.md  pdf-reader.md
specs/implemented/: app-backend-api.md  app-frontend-html-integration.md  xlsx-reader.md
specs/planned/: fastapi-backend.md  html-frontend-integration.md
src/pdf_reader/: reader.py
src/xlsx_reader/: reader.py
tests/: TestExtractSheets.test_extract_sheets_with_approval.approved.txt  test_xlsx_reader.py
(+12 files in other folders)
