[project]
name = "frontend"
version = "0.1.0"
description = "Static HTML frontend with E2E tests"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]
